<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/m_dialog_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/m_btn_white"
            android:gravity="center"
            android:paddingLeft="@dimen/edge_large"
            android:paddingRight="@dimen/edge_large"
            android:text="@string/btn_cancel"
            android:textColor="@color/label"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/m_dialog_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="@dimen/edge_normal"
            android:paddingRight="@dimen/edge_normal"
            android:singleLine="true"
            android:text="@string/m_title_select"
            android:textColor="@color/label"
            android:textSize="@dimen/font_larger" />

        <TextView
            android:id="@+id/m_dialog_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/m_btn_white"
            android:gravity="center"
            android:paddingLeft="@dimen/edge_large"
            android:paddingRight="@dimen/edge_large"
            android:text="@string/btn_confirm"
            android:textColor="@color/primary"
            android:textSize="@dimen/font_normal" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="208dp"
        android:orientation="horizontal"
        android:padding="@dimen/edge_normal">

        <com.merlin.view.widget.PickerView
            android:id="@+id/m_dialog_year_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/m_dialog_year"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_year"
            android:textColor="@color/text"
            android:textSize="@dimen/font_normal" />

        <com.merlin.view.widget.PickerView
            android:id="@+id/m_dialog_month_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/m_dialog_month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_month"
            android:textColor="@color/text"
            android:textSize="@dimen/font_normal" />

        <com.merlin.view.widget.PickerView
            android:id="@+id/m_dialog_day_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/m_dialog_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_day"
            android:textColor="@color/text"
            android:textSize="@dimen/font_normal" />

        <com.merlin.view.widget.PickerView
            android:id="@+id/m_dialog_hour_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/m_dialog_hour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_hour"
            android:textColor="@color/text"
            android:textSize="@dimen/font_normal" />

        <com.merlin.view.widget.PickerView
            android:id="@+id/m_dialog_minute_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/m_dialog_minute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_minute"
            android:textColor="@color/text"
            android:textSize="@dimen/font_normal" />

        <com.merlin.view.widget.PickerView
            android:id="@+id/m_dialog_second_picker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/m_dialog_second"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_second"
            android:textColor="@color/text"
            android:textSize="@dimen/font_normal" />

    </LinearLayout>

</LinearLayout>